--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,25 @@
 {
+    "home-header":{
+        "specialty":"Medical specialty",
+        "search-doctor": "Find a doctor by specialty",
+        "health-facility":"health-facility",
+        "select-room":"Choose hospital clinic",
+        "doctor":"Doctor",
+        "select-doctor":"Choose a good doctor",
+        "fee":"Examination package",
+        "check-health":"General health check",
+        "support": "Support"
+    },
+    "banner": {
+        "title1":"MEDICAL BACKGROUND",
+        "title2": "COMPREHENSIVE HEALTH CARE",
+        "check-specialty": "Specialized examination",
+        "remote":"Remote examination",
+        "general":"General examination",
+        "test": "Medical test",
+        "mental": "Mental health",
+        "dental":"Dental examination"
+    },
     "common": {
         "add": "Add",
         "edit": "Edit",
