--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -34,6 +34,9 @@
       "manage-specialty": "Manage specialties",
       "handbook": "Handbook",
       "manage-handbook": "Manage handbook"
+    },
+    "doctor": {
+      "manage-schedule": "Manage Doctor's schedule"
     }
   },
   "manage-user": {
@@ -54,5 +57,11 @@
   "homepage": {
     "outstanding-doctor": "Last week's featured doctor",
     "more-info": "More info"
+  },
+  "manage-schedule": {
+    "title": "Manage doctor's examination plan",
+    "choose-doctor": "Choose Doctor",
+    "choose-date": "Choose Date",
+    "save": "Save infor"
   }
 }
